# codex-cli-ultra

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.en.md  README.md  install.cmd  install.ps1  package-lock.json  package.json  run-tui.ps1  uninstall.cmd  uninstall.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  translation.yml
.github/workflows/: ci.yml  release.yml  sync-fork-channel.yml
docs/: CCU_BUNDLED_RELEASE_PLAN.md  CCU_I18N_FORK_PLAN.md  PLAN2_PROGRESS.md  initial-design.md
docs/i18n/: codex-0.144.1-text-inventory.md  codex-0.144.4-text-inventory.md  codex-0.144.5-text-inventory.md  demo-mvp.md  foundation-design.md  language-pack-template.md  mvp-usage.md  runtime-mvp.md  upstream-issue-comment-draft.md
docs/ideas/: worked-for-phrases.md
release-channels/: stable.json
research/codex-0.144.1/: i18n-size.json  tui-messages.jsonl
research/codex-0.144.4/: tui-messages.jsonl
scripts/: audit-ftl-contract.mjs  audit-visible-text.mjs  build-executor.mjs  codex-ultra.ps1  download-fork-release.mjs  install-tui.ps1  measure-i18n-size.ps1  package-release.ps1  prepare-ccu-release.mjs  sync-fork-channel.mjs  test-i18n-runtime.ps1
src/: cli.mjs  manage-main.mjs  version.mjs
src/adapter/: codex-0.144.1.mjs  (+2 more)
test/: adapter-transaction.test.mjs  adapter.test.mjs  catalog.test.mjs  cli.test.mjs  content-statusline-config.test.mjs  content-sync.test.mjs  language.test.mjs  manage-main.test.mjs  pack.test.mjs  theme.test.mjs  workflow-sync-channel.test.mjs
tui/: Cargo.toml
tui/src/: main.rs
(+67 files in other folders)
